--- a/sick-fits/frontend/.vscode/settings.json
+++ b/sick-fits/frontend/.vscode/settings.json
@@ -1,11 +1,6 @@
 {
-  "workbench.colorCustomizations": {
-    "titleBar.activeForeground": "#000",
-    "titleBar.inactiveForeground": "#000000CC",
-    "titleBar.activeBackground": "#FFC600",
-    "titleBar.inactiveBackground": "#FFC600CC"
-  },
-  "emmet.includeLanguages": { 
+  "emmet.includeLanguages": {
+    
     "javascript": "javascriptreact", 
     "vue-html": "html", 
   }, 
@@ -19,7 +14,7 @@
   },
   "eslint.alwaysShowStatus": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll": true
+    "source.fixAll": "explicit"
   },
   "prettier.disableLanguages": ["javascript", "javascriptreact"]
 }
